# k2_erp

./: .env  Dockerfile  docker-compose.yml  main.py  package-lock.json  pyproject.toml
app/: __init__.py  config.py
app/modules/clients/: models.py  routes.py  schemas.py
app/modules/items/: models.py  routes.py  schemas.py
app/modules/orders/: models.py  routes.py  schemas.py
frontend/: index.html  vite.config.ts
frontend/src/: api.ts  main.ts  tsconfig.json  types.ts
migrations/: env.py
migrations/versions/: 50cd0b8f4e3c_fix_target_metadata.py
