[project]
name = "flaskproject17"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-marshmallow>=1.5.0",
    "flask-sqlalchemy>=3.1.1",
    "marshmallow>=4.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
